--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 // Rename this file .env
 
-B2_ACCESS_KEY_ID=000000000000
-B2_SECRET_ACCESS_KEY=0000000000000
-B2_ENDPOINT=example.com
-B2_BUCKET_NAME=bucket
+S3_ACCESS_KEY_ID=000000000000
+S3_SECRET_ACCESS_KEY=0000000000000
+S3_ENDPOINT=example.com
+S3_BUCKET_NAME=bucket
 REDIRECT_URL=https://example.com
